# prof

./: .clang-format  CMakeLists.txt  CMakeSettings.json
include/: CMakeLists.txt
include/prof/: data.hpp  profiler.hpp  profiler_scope_keeper.hpp
samples/: CMakeLists.txt  sample.cpp  sample1.cpp  sample2.cpp  sample3.cpp
src/: 1profiler.hpp  CMakeLists.txt  base_profiler.hpp  data.cpp  execution_tree.hpp  frame.cpp  frame.hpp  profile.hpp  profiler.cpp  profiler.hpp  profiler_data_collector.cpp  profiler_data_collector.hpp  profiler_manager.cpp  profiler_manager.hpp  profiler_scope_keeper.cpp  scoped_profiler.cpp  scoped_profiler.hpp  thread_local_profiler.cpp  thread_local_profiler.hpp
src/opengl/: drawer.cpp  shader.hpp
